# tnt-kafka

./: .gitignore  CMakeLists.txt  Makefile  README.md  kafka-1.1.0-0.rockspec  kafka-scm-1.rockspec
.github/workflows/: asan_testing.yml  fast_testing.yml  publish.yml
benchmarks/: async_producer.lua  auto_offset_store_consumer.lua  manual_offset_store_consumer.lua  sync_producer.lua
cmake/: FindRdKafka.cmake  FindTarantool.cmake  buildRdKafka.cmake
docker/: Dockerfile
examples/consumer/: auto_offset_store.lua  manual_offset_store.lua
examples/producer/: async_producer.lua  sync_producer.lua
examples/static-build/: Dockerfile  README.md
kafka/: CMakeLists.txt  callbacks.c  callbacks.h  common.c  common.h  config.lua  consumer.c  consumer.h  consumer.lua  consumer_msg.c  consumer_msg.h  init.lua  kafka.lua  librdkafka.lua  new_producer.lua  producer.c  producer.h  producer.lua  queue.c  queue.h  tnt_kafka.c  tnt_kafka.h  topic.lua  topic_config.lua
patches/: librdkafka-tarantool-security-36.patch  librdkafka-tarantool-security-47.patch  librdkafka-tarantool-security-52.patch  librdkafka-tarantool-security-55.patch  librdkafka-tarantool-security-70.patch
rockspecs/: kafka-0.4.0-1.rockspec  kafka-0.4.1-1.rockspec  kafka-0.5.0-1.rockspec  kafka-1.0.0-1.rockspec  kafka-dev-1.rockspec  kafka-scm-1.rockspec  tnt-kafka-0.3.0.rockspec  tnt-kafka-0.3.3-1.rockspec  tnt-kafka-0.3.4-1.rockspec  tnt-kafka-0.4.0-1.rockspec  tnt-kafka-0.4.1-1.rockspec  tnt-kafka-dev-1.rockspec  tnt-kafka-scm-1.rockspec  tntkafka-0.3.1-1.rockspec  tntkafka-0.3.2-1.rockspec
tests/: app.lua  consumer.lua  new_producer.lua  producer.lua  requirements.txt  test_consumer.py  test_producer.py
tnt-kafka/: CMakeLists.txt  callbacks.c  callbacks.h  consumer.c  consumer.lua  consumer_msg.c  consumer_msg.h  init.lua  librdkafka.lua  producer.c  producer.h  producer.lua  queue.h  tnt_kafka.c
